# MserialPort

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/mserialport/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PFBackgroundService.cpp  SPBackgroundService.cpp  SPReadWorker.cpp  SPReadWriteWorker.cpp  SPWriteWorker.cpp  SerialPort.cpp  SerialPortManager.cpp  SerialPortManager.h  mserialport.cpp  native-lib.cpp
app/src/main/cpp/include/: SPReadWriteWorker.h
app/src/main/cpp/includes/: IBackgroundService.h  IWorker.h  PFBackgroundService.h  SPBackgroundService.h  SPReadWorker.h  SPReadWriteWorker.h  SPWriteWorker.h  SerialPort.h  SerialPort.hpp  SerialPortConstants.h  SerialPortManager.h  androidLog.h
app/src/main/java/com/castle/serialport/: SerialPortManager.kt
app/src/main/java/com/example/mserialport/: HanUnicodeUtil.java  HexUtils.java  MainActivity.kt  MenuPage.kt  PageJump.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/mserialport/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
